Add category pages

--- a/_posts/2018-07-10-creacion.md
+++ b/_posts/2018-07-10-creacion.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Creación de este sitio Jekyll
+categories:
+  - tutorial
 ---
 
 Para la creación de un sitio sencillo desde cero, ejecuta los siguientes comandos de terminal:
